--- a/HotelFoodAndRoomServiceSystem/CssFiles/GuestDashboard.css
+++ b/HotelFoodAndRoomServiceSystem/CssFiles/GuestDashboard.css
@@ -43,7 +43,7 @@ body {
 /*For Main Container */
     .contentContainer {
         margin: 0;
-        height: 100vh;
+        height: 120vh;
         width: 100%;
 /*        background-color: #b37979;*/
         display: grid;
@@ -107,23 +107,45 @@ body {
 /*For services button*/
 
     #servicesBtnContainer {
-        /*background-color: black;*/
+        display: flex;  
+        justify-content: center;
+        flex-direction: row;
         margin: 4vh 0vw 1vh 0vw;
         height: 35vh;
-        width: 90vw;
+        width: 100%;
         border-radius: 10px;
     }
-    #foodAndBeveragesBtn {
+
+    #foodServicesBtn {
         font-family: Poppins;
         color: #101540;
         background-color: white;
-        background-image: url('gallery/food and room services elements/icons/toolpurple.png');
+        background-image: url('gallery/food and room services elements/icons/food-service.png');
         background-size: 7vw 15vh;
         background-position: center 40px;
         background-repeat: no-repeat;
         margin: 0vh 0vw 0vh 0vw;
         height: 100%;
-        width: 30vw;
+        width: 30%;
+        cursor: pointer;
+        border: 1px solid black;
+        border-radius: 5px;
+        box-shadow: 5px 10px 30px rgb(0, 0, 0, 0.3);
+        padding-top: 15vh;
+    }
+
+
+    #roomServicesBtn {
+        font-family: Poppins;
+        color: #101540;
+        background-color: white;
+        background-image: url('gallery/food and room services elements/icons/roomservice.png');
+        background-size: 7vw 15vh;
+        background-position: center 40px;
+        background-repeat: no-repeat;
+        margin: 0vh 1vw 0vh 1vw;
+        height: 100%;
+        width: 30%;
         cursor: pointer;
         border: 1px solid black;
         border-radius: 5px;
@@ -139,21 +161,20 @@ body {
         background-size: 7vw 15vh;
         background-position: center 40px;
         background-repeat: no-repeat;
-        margin: 0vh 0vw 0vh 5vw;
+        margin: 0vh 0vw 0vh 0vw;
         height: 100%;
-        width: 30vw;
+        width: 30%;
         cursor: pointer;
         border: 1px solid black;
         border-radius: 5px;
         box-shadow: 5px 10px 30px rgb(0, 0, 0, 0.3);
         padding-top: 15vh;
     }
-
 /*For Log Out Button*/
 #logoutBtn {
     background-color: #101540;
     float: right;
-    margin: 2vh 0vw 1vh auto;
+    margin: 3vh 0vw 1vh auto;
     height: 5vh;
     width: 15vw;
     border: 1px solid white;
