--- a/HotelFoodAndRoomServiceSystem/CssFiles/GuestDashboard.css
+++ b/HotelFoodAndRoomServiceSystem/CssFiles/GuestDashboard.css
@@ -11,7 +11,7 @@ body {
 /*For header contents*/
     #header {
         margin: 0;
-        height: 20vh;
+        height: 15vh;
         width: 100%;
         background-color: white;
         display:flex;
@@ -20,7 +20,7 @@ body {
     }
 
     #hotelLogo {
-        height: 70%;
+        height: 100%;
         width: 7%;
         margin-left: 3vw;
     }
@@ -134,6 +134,16 @@ body {
         padding-top: 15vh;
     }
 
+        #foodServicesBtn:hover {
+            background: linear-gradient(#101450, white);
+            background-image: url('gallery/food and room services elements/icons/food-service.png');
+            background-size: 7vw 15vh;
+            background-position: center 40px;
+            background-repeat: no-repeat;
+            color: white;
+            transition: background 0.9s ease;
+        }
+
 
     #roomServicesBtn {
         font-family: Poppins;
@@ -153,6 +163,16 @@ body {
         padding-top: 15vh;
     }
 
+        #roomServicesBtn:hover {
+            background: linear-gradient(#101450, white);
+            background-image: url('gallery/food and room services elements/icons/roomservice.png');
+            background-size: 7vw 15vh;
+            background-position: center 40px;
+            background-repeat: no-repeat;
+            color: white;
+            transition: background 0.9s ease;
+        }
+
     #mainteReqBtn {
         font-family: Poppins;
         color: #101540;
@@ -170,6 +190,16 @@ body {
         box-shadow: 5px 10px 30px rgb(0, 0, 0, 0.3);
         padding-top: 15vh;
     }
+
+        #mainteReqBtn:hover {
+            background: linear-gradient(#101450, white);
+            background-image: url('gallery/food and room services elements/icons/toolpurple.png');
+            background-size: 7vw 15vh;
+            background-position: center 40px;
+            background-repeat: no-repeat;
+            color: white;
+            transition: background 0.9s ease;
+        }
 /*For Log Out Button*/
 #logoutBtn {
     background-color: #101540;
@@ -187,4 +217,120 @@ body {
 #logoutBtn:hover {
     color: skyblue;
 }
+
+
+
+/*FOR MAINTENANCE REQUEST FORM*/
+
+    .overlay {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+    }
+
+    .form-container {
+        background: linear-gradient(to bottom, #F1F2F3, #8CA5AD);
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 90vh;
+        width: 80%;
+        border-radius: 10px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+        z-index: 2;
+        font-family: Poppins;
+    }
+
+    #formSubContainer {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        height: 15%;
+        width: 100%;
+    }
+
+    #mainteRequestFormLbl {
+        font-size: 4vh;
+        margin: 2vh 0vw 0vh 2vw;
+    }
+
+    .closeBtn {
+        float: right;
+        margin: 2vh 2vw 0vh auto;
+        font-size: 20px;
+        background: none;
+        border: none;
+        cursor: pointer;
+    }
+
+    #formSubContainer2 {
+        display: flex;
+        flex-direction: row;
+        margin: 1vh 0vw 0vh 0vw;
+        width: 100%;
+        height: 15%;
+    }
+
+    #roomNumberContainer {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 50%;
+    }
+
+    #guestNameContainer {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 50%;
+    }
+
+    .textContent {
+        font-size: 2vh;
+        margin: 2vh 0vh 0vw 2vw;
+    }
+
+    .txtBoxContent {
+        height: 40%;
+        width: 70%;
+        margin: 2vh 0vw 0vh 2vw;
+        border-radius: 8px;
+        border: 1px solid black;
+    }
+
+    #issueTitleContainer {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 15%;
+    }
+
+    #issueDescriptionTxtBox {
+        margin: 4vh 0vw 0vh 2vw;
+        height: 35%;
+        width: 94%;
+        border-radius: 8px;
+        border: 1px solid black;
+        resize: none;
+    }
+
+    #submitBtn {
+        background-color: #101450;
+        color: white;
+        float: right;
+        margin: 3vh 2vw 0vh auto;
+        height: 7%;
+        width: 10%;
+        border: 0px;
+        border-radius: 10px;
+        cursor: pointer;
+    }
 
