--- a/HotelFoodAndRoomServiceSystem/CssFiles/GuestDashboard.css
+++ b/HotelFoodAndRoomServiceSystem/CssFiles/GuestDashboard.css
@@ -177,7 +177,7 @@ body {
         font-family: Poppins;
         color: #101540;
         background-color: white;
-        background-image: url('gallery/food and room services elements/icons/toolpurple.png');
+        background-image: url('gallery/food and room services elements/icons/sidebar icons/tools.png');
         background-size: 7vw 15vh;
         background-position: center 40px;
         background-repeat: no-repeat;
@@ -193,7 +193,7 @@ body {
 
         #mainteReqBtn:hover {
             background: linear-gradient(#101450, white);
-            background-image: url('gallery/food and room services elements/icons/toolpurple.png');
+            background-image: url('gallery/food and room services elements/icons/sidebar icons/tools.png');
             background-size: 7vw 15vh;
             background-position: center 40px;
             background-repeat: no-repeat;
