--- a/HotelFoodAndRoomServiceSystem/CssFiles/GuestDashboard.css
+++ b/HotelFoodAndRoomServiceSystem/CssFiles/GuestDashboard.css
@@ -108,7 +108,6 @@ body {
 
     #servicesBtnContainer {
         display: flex;  
-        justify-content: center;
         flex-direction: row;
         margin: 4vh 0vw 1vh 0vw;
         height: 35vh;
@@ -116,90 +115,79 @@ body {
         border-radius: 10px;
     }
 
-    #foodServicesBtn {
-        font-family: Poppins;
-        color: #101540;
+    .serviceContainer {
         background-color: white;
-        background-image: url('gallery/food and room services elements/icons/food-service.png');
-        background-size: 7vw 15vh;
-        background-position: center 40px;
-        background-repeat: no-repeat;
-        margin: 0vh 0vw 0vh 0vw;
         height: 100%;
         width: 30%;
-        cursor: pointer;
-        border: 1px solid black;
+        margin: 0vh 4.5vw 0vh 0vw;
+        display: flex;
+        flex-direction: column;
+        border: 0px;
         border-radius: 5px;
-        box-shadow: 5px 10px 30px rgb(0, 0, 0, 0.3);
-        padding-top: 15vh;
+        color: #101450;
+        font-family: Poppins;
+        cursor: pointer;
     }
 
-        #foodServicesBtn:hover {
-            background: linear-gradient(#101450, white);
-            background-image: url('gallery/food and room services elements/icons/food-service.png');
-            background-size: 7vw 15vh;
-            background-position: center 40px;
-            background-repeat: no-repeat;
-            color: white;
-            transition: background 0.9s ease;
-        }
+    .serviceContainer:hover {
+        background: linear-gradient(to bottom, white, #101450);
+        transition: 0.3s ease-in;
+        color: white;
+    }
 
+    .serviceContainer2 {
+        height: 25%;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+    .servicesLogo {
+        margin: 2vh 0vw 0vh 1vw;
+        height: 40%;
+        width: 30%;
+    }
+
+    .servicesLbl {
+        font-size: 4vh;
+        font-weight: bolder;
+        margin: 2vh 0vw 0vh 2vw;
+    }
+
+    .servicesDescriptionLbl {
+        font-size: 2.5vh;
+        width: 70%;
+        margin: 1vh 0vw 0vh 2vw;
+        word-break: break-word;
+    }
+
+    .servicesBtnLayout {
+        background-color: transparent;
+        background-image: url('gallery/food and room services elements/icons/room services icon/next.png');
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        border: 0;
+        height: 80%;
+        width: 15%;
+        float: right;
+        margin: 0vh 1vw 0vh auto;
+        cursor: pointer;
+    }
+
+    #mainteReqContainer {
+        margin: 0vh 0vw 0vh 0vw;
+    }
 
     #roomServicesBtn {
-        font-family: Poppins;
-        color: #101540;
-        background-color: white;
-        background-image: url('gallery/food and room services elements/icons/roomservice.png');
-        background-size: 7vw 15vh;
-        background-position: center 40px;
-        background-repeat: no-repeat;
-        margin: 0vh 1vw 0vh 1vw;
-        height: 100%;
-        width: 30%;
-        cursor: pointer;
-        border: 1px solid black;
-        border-radius: 5px;
-        box-shadow: 5px 10px 30px rgb(0, 0, 0, 0.3);
-        padding-top: 15vh;
-    }
 
-        #roomServicesBtn:hover {
-            background: linear-gradient(#101450, white);
-            background-image: url('gallery/food and room services elements/icons/roomservice.png');
-            background-size: 7vw 15vh;
-            background-position: center 40px;
-            background-repeat: no-repeat;
-            color: white;
-            transition: background 0.9s ease;
-        }
+    }
 
     #mainteReqBtn {
-        font-family: Poppins;
-        color: #101540;
-        background-color: white;
-        background-image: url('gallery/food and room services elements/icons/sidebar icons/tools.png');
-        background-size: 7vw 15vh;
-        background-position: center 40px;
-        background-repeat: no-repeat;
-        margin: 0vh 0vw 0vh 0vw;
-        height: 100%;
-        width: 30%;
-        cursor: pointer;
-        border: 1px solid black;
-        border-radius: 5px;
-        box-shadow: 5px 10px 30px rgb(0, 0, 0, 0.3);
-        padding-top: 15vh;
+
     }
 
-        #mainteReqBtn:hover {
-            background: linear-gradient(#101450, white);
-            background-image: url('gallery/food and room services elements/icons/sidebar icons/tools.png');
-            background-size: 7vw 15vh;
-            background-position: center 40px;
-            background-repeat: no-repeat;
-            color: white;
-            transition: background 0.9s ease;
-        }
+
 /*For Log Out Button*/
 #logoutBtn {
     background-color: #101540;
