--- a/HotelFoodAndRoomServiceSystem/CssFiles/RoomService.css
+++ b/HotelFoodAndRoomServiceSystem/CssFiles/RoomService.css
@@ -36,7 +36,7 @@ body {
     }
 
     #hotelLogo {
-        margin: 0vh 0vw 0vh 25vw;
+        margin: 0vh 0vw 0vh 22vw;
         height: 100%;
         width: 7%;
     }
@@ -51,7 +51,7 @@ body {
         background-color:transparent;
         background-image: url('gallery/food and room services elements/icons/navbar/grocery-store.png');
         background-position: center;
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
         border: 0;
         height: 45%;
@@ -213,7 +213,7 @@ body {
     .servicesBtn {
         background-color: transparent;
         background-image: url('gallery/food and room services elements/icons/room services icon/next.png');
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
         border: 0;
