Added quantity function in food services

--- a/HotelFoodAndRoomServiceSystem/CssFiles/FoodService.css
+++ b/HotelFoodAndRoomServiceSystem/CssFiles/FoodService.css
@@ -178,6 +178,23 @@ header{
         word-break: break-word;
     }
 
+    .btnContainer {
+        height: 7%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+    }
+
+    .btnContainer2 {
+        height: 100%;
+        width: 40%;
+        margin: 0vh 0vw 0vh auto;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
     .addToCart {
         background-color: transparent;
         background-image: url('gallery/food and room services elements/icons/navbar/grocery-store.png');
@@ -185,8 +202,30 @@ header{
         background-repeat: no-repeat;
         background-position: center;
         border: 0;
-        height: 7%;
+        height: 100%;
         width: 20%;
+        cursor: pointer;
+    }
+
+    .quantityTxtBox {
+        background-color: #EDF0F2;
+        height: 100%;
+        width: 30%;
+        text-align: center;
+        border: 1px solid black;
+        cursor: default;
+        margin: 0vh 1px 0vh 1px;
+    }
+
+    .btnDecrease {
+        background-color: transparent;
+        border: 0;
+        cursor: pointer;
+    }
+
+    .btnIncrease {
+        background-color: transparent;
+        border: 0;
         cursor: pointer;
     }
 
