--- a/HotelFoodAndRoomServiceSystem/CssFiles/FoodService.css
+++ b/HotelFoodAndRoomServiceSystem/CssFiles/FoodService.css
@@ -81,7 +81,8 @@ header{
     }
 
 /*FOR MAIN CONTENT*/
-    #mainContainer {
+   /*FOOD AND BEVERAGE ITEM*/
+    #foodBeverageContainer {
         height: 100vh;
         width: 100%;
         background: linear-gradient(to bottom, white, #8CA5AD);
@@ -116,7 +117,6 @@ header{
         flex-wrap: wrap;
     }
 
-/*FOR ASP LITERAL AUTO INCREMENT ITEM DESIGN*/
     .foodOrBeverageContainer {
         margin: 4vh 0vw 0vh 2vw;
         background-color: white;
@@ -228,6 +228,105 @@ header{
         border: 0;
         cursor: pointer;
     }
+
+
+/*FOR ORDER ITEM*/
+
+    .overlay {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+    }
+
+    #orderedItemPanel {
+        background-color: white;
+        height: 70%;
+        width: 30%;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 2;
+    }
+
+    #orderItemPanelLayout {
+        height: 100%;
+        width: 100%;
+        display: flex; 
+        flex-direction: column;
+    }
+
+    #orderThisItemLbl {
+        font-size: 5vh;
+        font-weight: bold;
+        width: auto;
+        margin: 2vh 0vw 0vh 1vw;
+    }
+
+    #itemInfoLayout {
+        height: 70%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    #itemImageLayout {
+        height: 60%;
+        width: 35%;
+        border: 1px solid black;
+        border-radius: 10px;
+        box-shadow: 0px 10px 30px rgb(0, 0, 0, 0.3);
+        margin: 2vh auto 2vh auto;
+    }
+    .itemDetails {
+        font-size: 2.5vh;
+        margin: 0vh 0vw 0vh 4vw;
+    }
+    .mainItemInfo {
+        font-weight: bold;
+    }
+    #orderItemBtnsLayout {
+        height: 15%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+    #orderBtn {
+        background-color: #101450;
+        color: white;
+        height: 50%;
+        width: 20%;
+        border: 1px solid black;
+        border-radius: 10px;
+        cursor: pointer;
+        margin: 0vh 1vw 0vw 12vw;
+    }
+        #orderBtn:hover {
+            color: blue;
+        }
+
+    #cancelBtn {
+        background-color: transparent;
+        color: black;
+        height: 50%;
+        width: 20%;
+        border: 1px solid black;
+        border-radius: 10px;
+        cursor: pointer;
+    }
+        #cancelBtn:hover {
+            color: blue;
+        }
+
 
 /*FOR FOOTER CONTENT*/
     footer {
