--- a/HotelFoodAndRoomServiceSystem/CssFiles/FoodService.css
+++ b/HotelFoodAndRoomServiceSystem/CssFiles/FoodService.css
@@ -327,6 +327,56 @@ header{
             color: blue;
         }
 
+/*IF ORDERBTN IS CLICKED*/
+        .overlay2 {
+            display: block;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 1;
+        }
+
+        #confirmedOrderPanel {
+            background-color: white;
+            height: 30%;
+            width: 25%;
+            border-radius: 20px;
+            display: flex;
+            flex-direction: column;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            position: fixed;
+            z-index: 2;
+        }
+
+        #orderRequestedLbl {
+            height: 70%;
+            display: flex;
+            align-items: center;
+            font-size: 3.5vh;
+            font-weight: bold;
+            margin: 1vh auto 0vh auto;
+        }
+        
+        #closeBtn {
+            background-color: #101450;
+            color: white;
+            border: 1px solid black;
+            border-radius: 10px;
+            height: 20%;
+            width: 25%;
+            margin: 0vh 2vw 0vh auto;
+            cursor: pointer;
+        }
+
+            #closeBtn:hover {
+                color: blue;
+            }
+
 
 /*FOR FOOTER CONTENT*/
     footer {
