--- a/HotelFoodAndRoomServiceSystem/CssFiles/GuestHistory.css
+++ b/HotelFoodAndRoomServiceSystem/CssFiles/GuestHistory.css
@@ -174,7 +174,7 @@ body {
 
 /*FOR SERVICE HISTORY TABLE CONTAINER*/
     .tableContainer {
-        height: 88%;
+        height: 68%;
         width: 90%;
         margin: 2vh 0vw 0vh 4vw;
         display: flex;
@@ -284,4 +284,29 @@ body {
             padding-left: 10px;
             font-size: 2.5vh;
         }
+
+/*FOR REFRESH AND DELETE BUTTON CSS*/
+    .refreshAndDeleteBtnLayout {
+        height: 10%;
+        width: 90%;
+        margin: 4vh 3vw 0vh 4vw;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+
+    .refreshBtn {
+        background-color: transparent;
+        background-image: url('gallery/food and room services elements/icons/sync.png');
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        border: 0;
+        height: 70%;
+        width: 3%;
+        margin: 0vh 2vw 0vh auto;
+        cursor: pointer;
+    }
 
