--- a/HotelFoodAndRoomServiceSystem/CssFiles/RoomService.css
+++ b/HotelFoodAndRoomServiceSystem/CssFiles/RoomService.css
@@ -31,9 +31,21 @@ body {
         cursor: pointer;
     }
 
-    #dashBoardBtn:hover {
-        color: blue;
+        #dashBoardBtn:hover {
+            color: blue;
+        }
+
+    #roomServiceBtn {
+        border: 0;
+        margin: 0vh 0vw 0vh 2vw;
+        background-color: transparent;
+        font-size: 3vh;
+        cursor: pointer;
     }
+
+        #roomServiceBtn:hover {
+            color: blue;
+        }
 
     #hotelLogo {
         margin: 0vh 0vw 0vh 22vw;
@@ -62,166 +74,346 @@ body {
     }
 
 /*FOR MAIN CONTENT*/
-    #mainContainer {
+    .mainContainer {
         display: flex; 
         flex-direction: row;
+        align-items: center;
         justify-content: center;
         background: linear-gradient(to top, #7D7F9F, white, #7D7F9F);
         height: 100vh;
         width: 100%;
     }
 
-    #subContainer1 {
+    .textColor{
+        color: white;
+    }
+
+    .roomServiceContainer {
+        height: 90%;
+        width: 25%;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
         margin: 0vh 2vw 0vh 0vw;
-        height: 100%;
-        width: 40%;
     }
-    /*CONTENT'S CSS OF subContainer1*/
 
-        #laundryDryServices {
-            display: flex;
-            flex-direction: column;
-            margin: 0vh 0vw 5vh 0vw;
-            background-color: #101450;
-            color: white;
-            height: 40%;
-            width: 75%;
-            border-radius: 10px;
-        }
+    .roomServiceImgLayout {
+        height: 60%;
+        width:100%;
+        margin:0;
+    }
 
-        #subContainer1Logo1 {
-            margin: 2vh 0vw 0vh 1vw;
-            height: 40%;
-            width: 30%;
-        }
-
-        #subContainer1Lbl1 {
-            margin: 2vh 0vw 0vh 2vw;
-            font-size: 3vh;
-        }
-
-        #subContainer1Description1 {
-            margin: 2vh 0vw 0vh 2vw;
-            font-size: 2vh;
-            width: 70%;
-            word-wrap: break-word;
-        }
-
-        #spaServices {
-            display: flex;
-            flex-direction: column;
-            background-color: #101450;
-            color: white;
-            height: 40%;
-            width: 75%;
-            border-radius: 10px;
-        }
-
-        #subContainer1Logo2 {
-            margin: 2vh 0vw 0vh 1vw;
-            height: 40%;
-            width: 30%;
-        }
-
-        #subContainer1Lbl2 {
-            margin: 2vh 0vw 0vh 2vw;
-            font-size: 3vh;
-        }
-
-        #subContainer1Description2 {
-            margin: 2vh 0vw 0vh 2vw;
-            font-size: 2vh;
-            width: 70%;
-            word-wrap: break-word;
-        }
-
-
-    #subContainer2 {
+    .roomServiceInfoContainer {
+        background: #101450;
+        margin: 0vh 0vw 0vh 0vw;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin: 0vh 0vw 0vh 2vw;
-        height: 100%;
-        width: 40%;
+        height: 40%;
+        width: 100%;
     }
 
-    /*CONTENT'S CSS OF subContainer2 */
+    .roomServiceTitle {
+        height: 40%;
+        font-size: 4.5vh;
+        font-weight: bold;
+        margin: 1vh 0vw 0vh 1vw;
+    }
 
-        #houseKeepingServices {
-            display: flex;
-            flex-direction: column;
-            margin: 0vh 0vw 5vh 0vw;
-            background-color: #101450;
-            color: white;
-            height: 40%;
-            width: 75%;
-            border-radius: 10px;
-        }
+    .roomServiceDescription {
+        height: 100%;
+        width: 70%;
+        font-size: 2.5vh;
+        margin: 0vh 0vw 0vh 1vw;
+        overflow-y: auto;
+        text-align: justify;
+        word-break: break-word;
+    }
 
-        #subContainer2Logo1 {
-            margin: 2vh 0vw 0vh 1vw;
-            height: 40%;
-            width: 30%;
-        }
+    .descriptionAndBtnLayout {
+        margin: 3vh 0vw 0vh 0vw;
+        height:50%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
 
-        #subContainer2Lbl1 {
-            margin: 2vh 0vw 0vh 2vw;
-            font-size: 3vh;
-        }
-
-        #subContainer2Description1 {
-            margin: 2vh 0vw 0vh 2vw;
-            font-size: 2vh;
-            width: 70%;
-            word-wrap: break-word;
-        }
-
-        #massageServices {
-            display: flex;
-            flex-direction: column;
-            background-color: #101450;
-            color: white;
-            height: 40%;
-            width: 75%;
-            border-radius: 10px;
-        }
-
-        #subContainer2Logo2 {
-            margin: 2vh 0vw 0vh 1vw;
-            height: 40%;
-            width: 30%;
-        }
-
-        #subContainer2Lbl2 {
-            margin: 2vh 0vw 0vh 2vw;
-            font-size: 3vh;
-        }
-
-        #subContainer2Description2 {
-            margin: 2vh 0vw 0vh 2vw;
-            font-size: 2vh;
-            width: 70%;
-            word-wrap: break-word;
-        }
-
-
-    .servicesBtn {
+    .roomServiceBtn {
         background-color: transparent;
         background-image: url('gallery/food and room services elements/icons/room services icon/next.png');
         background-size: contain;
-        background-repeat: no-repeat;
         background-position: center;
+        background-repeat: no-repeat;
+        height: 40%;
+        width: 30%;
+        margin: 0vh 0vw 3vh 2vw;
         border: 0;
-        height: 30%;
-        width: 10%;
-        float: right;
-        margin: 0vh 1vw 1vh auto;
         cursor: pointer;
+    }
+
+/*LAUNDRY AND DRY CLEANING SERVICES CONTENT*/
+    .laundryContent{
+        background-color: #101450;
+        height: 80%;
+        width: 30%;
+        margin: 0vh 2vw 0vh 0vw;
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .laundryContent:hover {
+        background: linear-gradient(to top, black, #101450);
+        transition: 0.9s ease-in;
+    }
+
+    .laundryContentTitle {
+        height: 20%;
+        width: 100%;
+        font-size: 5vh;
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .laundryContentImgLayout {
+        height: 45%;
+        width: 70%;
+    }
+
+    .laundryContentDescription {
+        height: 20%;
+        width: 70%;
+        display: flex;
+        align-items: center;
+        font-size: 2.5vh;
+        text-align: justify;
+        overflow-y: auto;
+        margin: 1vh 0vw 0vh 0vw;
+    }
+
+    .laundryContentBtn {
+        background-color: #101450;
+        color: white;
+        height: 7%;
+        width: 20%;
+        border: 1px solid white;
+        border-radius: 20px;
+        margin: 2vh 2vw 0vh auto;
+        cursor: pointer;
+    }
+
+    .laundryContentBtn:hover {
+        border: 0;
+        color: blue;
+    }
+
+/*FOR SPA SERVICE CONTENT*/
+    .spaServiceContent {
+        background-color: #101450;
+        height: 80%;
+        width: 30%;
+        margin: 0vh 2vw 0vh 0vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+        .spaServiceContent:hover {
+            background: linear-gradient(to top, black, #101450);
+            transition: 0.9s ease-in;
+        }
+
+    .spaServiceContentTitle {
+        height: 20%;
+        width: 70%;
+        text-align: center;
+        font-size: 5vh;
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .spaServiceContentImgLayout {
+        height: 45%;
+        width: 70%;
+    }
+
+    .spaServiceContentDescription {
+        height: 20%;
+        width: 70%;
+        display: flex;
+        align-items: center;
+        font-size: 2.5vh;
+        text-align: justify;
+        overflow-y: auto;
+        margin: 1vh 0vw 0vh 0vw;
+    }
+
+    .spaServiceContentBtn {
+        background-color: #101450;
+        color: white;
+        height: 7%;
+        width: 20%;
+        border: 1px solid white;
+        border-radius: 20px;
+        margin: 2vh 2vw 0vh auto;
+        cursor: pointer;
+    }
+
+        .spaServiceContentBtn:hover {
+            border: 0;
+            color: blue;
+        }
+
+
+/*HOUSEKEEPING SERVICE CONTENT*/
+    .housekeepingContent {
+        background-color: #101450;
+        height: 80%;
+        width: 30%;
+        margin: 0vh 2vw 0vh 0vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+        .housekeepingContent:hover {
+            background: linear-gradient(to top, black, #101450);
+            transition: 0.9s ease-in;
+        }
+
+    .housekeepingContentTitle {
+        height: 20%;
+        width: 70%;
+        text-align: center;
+        font-size: 5vh;
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .housekeepingContentImgLayout {
+        height: 45%;
+        width: 70%;
+    }
+
+    .housekeepingContentDescription {
+        height: 20%;
+        width: 70%;
+        display: flex;
+        align-items: center;
+        font-size: 2.5vh;
+        text-align: justify;
+        overflow-y: auto;
+        margin: 1vh 0vw 0vh 0vw;
+    }
+
+    .housekeepingContentBtn {
+        background-color: #101450;
+        color: white;
+        height: 7%;
+        width: 20%;
+        border: 1px solid white;
+        border-radius: 20px;
+        margin: 2vh 2vw 0vh auto;
+        cursor: pointer;
+    }
+
+        .housekeepingContentBtn:hover {
+            border: 0;
+            color: blue;
+        }
+
+
+/*INQUIRE FORM*/
+
+    .overlay {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+    }
+
+    .inquireForm {
+        background: linear-gradient(to bottom, #F1F2F3, #8CA5AD);
+        height: 90%;
+        width: 55%;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 2;
+    }
+
+    #inquireFormHeader {
+       height: 10%;
+       width: 100%;
+       display:flex;
+       flex-direction: row;
+       align-items: center;
+       margin: 2vh 0vw 0vh 0vw;
+    }
+
+    #roomServiceFormLbl {
+        margin:0vh 0vw 0vh 2vw;
+        font-size: 4vh;
+    }
+
+    #closeFormBtn {
+        background-color: transparent;
+        height: 50%;
+        width: 4%;
+        margin: 0vh 2vw 0vh auto;
+        border: 1px solid black;
+        border-radius: 50px;
+        cursor: pointer;
+    }
+
+    #inquireFormContent {
+        height: 40%;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+    }
+
+    .inquireFormContent2 {
+        height: 100%;
+        width: 45%;
+        margin: 0vh 0vw 0vh 2vw;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .formContentText {
+        font-size: 2.5vh;
+        margin: 0vh 0vw 0vh 0vw;
+    }
+
+    .formContentTxtBox {
+        height: 15%;
+        width: 90%;
+        margin: 1vh 0vw 4vh 0vw;
+        border: 1px solid black;
+        border-radius: 5px;
+    }
+
+    #guestNameTxtBox {
+        background-color: #EAEAEA;
+    }
+
+    #serviceDescriptionLbl {
+        font-size: 2.5vh;
+        margin: 0vh 0vw 0vh 2vw;
     }
 
 /*FOR FOOTER*/
