--- a/HotelFoodAndRoomServiceSystem/CssFiles/RoomService.css
+++ b/HotelFoodAndRoomServiceSystem/CssFiles/RoomService.css
@@ -5,7 +5,6 @@ body {
     padding: 0;
     height: auto;
     width: auto;
-    background-color: peachpuff;
 }
 
     
@@ -407,6 +406,14 @@ body {
         border-radius: 5px;
     }
 
+    #roomNumberTxtBox {
+        background-color: #EAEAEA;
+    }
+
+    #roomServiceTypeTxtBox{
+        background-color: #EAEAEA;
+    }
+
     #guestNameTxtBox {
         background-color: #EAEAEA;
     }
@@ -415,6 +422,44 @@ body {
         font-size: 2.5vh;
         margin: 0vh 0vw 0vh 2vw;
     }
+
+    #serviceDescriptionTxtBox {
+        height: 30%;
+        width: 90%;
+        margin: 2vh 0vw 0vh 2vw;
+        border: 1px solid black;
+        border-radius: 10px;
+        resize: none;
+        font-family: Poppins;
+    }
+
+    #requestBtnLayout {
+        height: 10%;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #servicePriceCurrencyLbl {
+        margin: 0vh 0vw 0vh 2vw;
+    }
+
+    #requestBtn {
+        height: 60%;
+        width: 12%;
+        margin: 0vh 3vw 0vh auto;
+        background-color: #101450;
+        color: white;
+        border: 1px solid black;
+        border-radius: 10px;
+        cursor: pointer;
+    }
+        #requestBtn:hover {
+            color: blue;
+        }
+
 
 /*FOR FOOTER*/
     #footer {
