--- a/HotelFoodAndRoomServiceSystem/CssFiles/AdminDashboard.css
+++ b/HotelFoodAndRoomServiceSystem/CssFiles/AdminDashboard.css
@@ -535,6 +535,104 @@ body {
         color:grey;
     }
 
+/*SERVICE REQUEST PANEL*/
+
+    /*UNDER FOOD SERVICE*/
+    #foodServiceRequestPanel {
+        height: 65%;
+        width: 90%;
+        margin: 4vh 0vw 0vh 5vw;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        overflow-y: auto;
+    }
+
+    .foodRequestTable {
+        background-color: white;
+        height: 45%;
+        width: 45%;
+        margin: 3vh 0vw 0vh 2vw;
+        border: 0;
+        border-radius: 10px;
+        background-color: white;
+        box-shadow: 0px 10px 30px rgb(6, 0, 0, 0.3);
+    }
+
+    .foodRequestTableText {
+        font-size: 2.5vh;
+        font-weight: bold;
+    }
+
+    .foodRequestTableContent {
+        height: 10%;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .foodRequestTableContent2 {
+        height: 50%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .foodRequestTableContent3 {
+        height: 15%;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        border-top: 1px solid black;
+    }
+
+    #foodRequestTableContent1 {
+        margin: 1vh 0vw 0vh 0vw;
+    }
+
+    #foodOrderIdLbl {
+        margin: 0vh 0vw 0vh 1vw;
+    }
+
+    #foodRoomNumLbl {
+        margin: 0vh 2vw 0vh auto;
+    }
+
+    #foodGuestNameLbl {
+        margin: 0vh 0vw 0vh 1vw;
+    }
+
+    #foodItemNameLbl {
+        font-size: 5vh;
+        margin: 2vh 0vw 0vh 1vw;
+    }
+
+    #foodPriceLbl {
+        font-size: 2.5vh;
+        margin: 1vh 0vw 0vh 1vw;
+    }
+
+    #foodTotalPriceLbl {
+        font-size: 2.5vh;
+        margin: 0vh 0vw 0vh 1vw;
+    }
+
+    #foodAssignedStaffLbl {
+        font-size: 2vh;
+        margin: 0vh 0vw 0vh 1vw;
+    }
+
+    #foodRequestStatusLbl {
+        font-size: 2vh;
+        margin: 0vh 2vw 0vh auto;
+    }
+
+    #foodRequestDateLbl {
+        margin: 0vh 0vw 0vh 1vw;
+    }
+
 /*MAINTENANCE REQUEST PANEL*/
     #maintenanceRequestPanel {
         background: linear-gradient(to bottom, #F1F2F3, #8CA5AD);
