--- a/HotelFoodAndRoomServiceSystem/CssFiles/AdminDashboard.css
+++ b/HotelFoodAndRoomServiceSystem/CssFiles/AdminDashboard.css
@@ -522,10 +522,14 @@ body {
         font-family: Poppins;
         cursor:pointer;
         border: 0;
-        margin: 0vh 0vw 0vh 4vw;
+        margin: 0vh 0vw 0vh 2vw;
     }
     .taskStatusButtons:hover {
         color: grey;
+    }
+
+    #foodAndBeveragesTaskBtn {
+        margin: 0vh 0vw 0vh 4vw;
     }
 
     .taskStatusCount {
@@ -535,9 +539,8 @@ body {
         color:grey;
     }
 
-/*SERVICE REQUEST PANEL*/
-
     /*UNDER FOOD SERVICE*/
+
     #foodServiceRequestPanel {
         height: 65%;
         width: 90%;
@@ -632,6 +635,126 @@ body {
     #foodRequestDateLbl {
         margin: 0vh 0vw 0vh 1vw;
     }
+
+    /*UNDER ROOM SERVICE*/
+
+    #roomServiceRequestPanel {
+        height: 65%;
+        width: 90%;
+        margin: 4vh 0vw 0vh 5vw;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        overflow-y: auto;
+    }
+
+    .roomRequestTable {
+        background-color: white;
+        height: 45%;
+        width: 45%;
+        margin: 3vh 0vw 0vh 2vw;
+        border: 0;
+        border-radius: 10px;
+        background-color: white;
+        box-shadow: 0px 10px 30px rgb(6, 0, 0, 0.3);
+    }
+
+    .roomRequestTableText {
+        font-size: 2.5vh;
+        font-weight: bold;
+    }
+
+    .roomRequestTableContent {
+        height: 10%;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .roomRequestTableContent2 {
+        height: 50%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .roomRequestTableContent3 {
+        height: 15%;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        border-top: 1px solid black;
+    }
+
+    #roomRequestTableContent1 {
+        margin: 1vh 0vw 0vh 0vw;
+    }
+
+    #roomRequestIdLbl {
+        margin: 0vh 0vw 0vh 1vw;
+    }
+
+    #roomRoomNumLbl {
+        margin: 0vh 2vw 0vh auto;
+    }
+
+    #roomGuestNameLbl {
+        margin: 0vh 0vw 0vh 1vw;
+    }
+
+    #roomServiceNameLbl {
+        font-size: 4vh;
+        margin: 2vh 0vw 0vh 1vw;
+    }
+
+    #roomPriceLbl {
+        font-size: 2.5vh;
+        margin: 1vh 0vw 0vh 1vw;
+    }
+
+    #roomTotalPriceLbl {
+        font-size: 2.5vh;
+        margin: 0vh 0vw 0vh 1vw;
+    }
+
+    #roomAssignedStaffLbl {
+        font-size: 2vh;
+        margin: 0vh 0vw 0vh 1vw;
+    }
+
+    #roomRequestStatusLbl {
+        font-size: 2vh;
+        margin: 0vh 2vw 0vh auto;
+    }
+
+    #roomRequestDateLbl {
+        margin: 0vh 0vw 0vh 1vw;
+    }
+
+
+    /*UNDER IN PROGRESS SERVICE REQUEST*/
+    #foodInProgressServiceRequestPanel {
+        height: 65%;
+        width: 90%;
+        margin: 4vh 0vw 0vh 5vw;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        overflow-y: auto;
+    }
+
+    #roomInProgressServiceRequestPanel {
+        height: 65%;
+        width: 90%;
+        margin: 4vh 0vw 0vh 5vw;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        overflow-y: auto;
+    }
+
 
 /*MAINTENANCE REQUEST PANEL*/
     #maintenanceRequestPanel {
